TAG: qcreports_db-4-3-2-5
DATE: 12/31/2009-01/20/2010
STAFF: lec
CHANGES:
TR9989 - delete some GO QC reports
1) MRK_NoGO.py; remove A,B,C; keep D
2) MRK_GOIEA.py; remove A,C,F; keep D,E (B was removed previously)
3) MRK_GOGold.py; remove A,C; keep B
4) MRK_GOAllele.py; remove
5) VOC_GODups.sql; remove
TR9996 - modifications to GO "done" (GO_done.py)
TR10040) ALL_MolNotesNoMP.py; add more J: exclusions

Remember to manually remove the old /data/reports/qcreports_db/output files

TAG: qcreports_db-4-3-2-4
DATE: 12/21/2009
STAFF: mhall
CHANGES:
1) Added a link to the ALL_Jax_Report.rpt to the qcr.html page.

TAG: qcreports_db-4-3-2-3
DATE: 12/18/2009
STAFF: mhall
CHANGES:
1) Created a new Monthly report.

TAG: qcreports_db-4-3-2-2
DATE: 12/11/2009
STAFF: mhall
CHANGES:
1) Finalized the changes to the GO_Combined report, and releasing it.

TAG: qcreports_db-4-3-2-1
DATE: 11/23/2009
STAFF: dbm
CHANGES:
1) Added link to qcr.html for ArrayExpress load

TAG: qcreports_db-4-3-1-4
DATE: 11/18/2009
STAFF: lec
CHANGES:
1) TR9949/GXD_DupPrimers.sql/modify GXD duplicate primer set QC
2) TR9938/GXD_AllelePairCheck.sql/mismatch of marker type for an alleleand for allele pair

TAG: qcreports_db-4-3-1-3
DATE: 11/05/2009
STAFF: lec
CHANGES:
1) TR9936/GXD_Stats
2) TR9783/qcr.html;MouseFunc->FuncBase

TAG: qcreports_db-4-3-1-2
DATE: 10/20/2009
STAFF: lec
CHANGES:
1) TR9894/goStats.sh; add GOA section

TAG: qcreports_db-4-3-1-1
DATE: 10/14/2009
STAFF: lec
CHANGES:
1) TR9665/GXD_GelBandError.sql/remove wrong report....
   GXD_GelBand.sql.rpt needs to be restored

TAG: qcreports_db-4-3-0-12
DATE: 10/07/2009
STAFF: lec
CHANGES:
1) TR9876/GXD_LackingImages.py

TAG: qcreports_db-4-3-0-11
DATE: 09/24/2009
STAFF: lec
CHANGES:
1) TR9806/GXD_EarlyEmbPapers.py
	  GXD_FullCodeable.py
	  GXD_FullCode.py
	  GXD_OneGenePapers.py
2) TR9846/GXD_WithdrawnMarker.py
3) TR9858/GXD_AssayInIndexNotInCache.py

TAG: qcreports_db-4-3-0-10
DATE: 08/20/2009
STAFF: lec
CHANGES: